Fix a bug causing images in cart to be vertically extended on iOS devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -329,12 +329,15 @@ main,
 
 .cart-item {
   display: flex;
+  align-items: start;
   gap: 1rem;
 }
 
 .cart-item img {
   width: 30%;
-  height: fit-content;
+  /* height: fit-content; */
+  height: auto;
+  object-fit: contain;
 }
 
 .cart-item-info {
